- Applied Hans Bergsten's patch on TagLibraryInfoImpl for Jspc problem. - Reverted mods to TagFileProcessor.java - Created a dummy JspRuntimeContext for handling tag file compilations. - Added debugging option to jspc.sh
Manual precompilation with jspc.sh seems to work now, but precompilation
in ant still fail.  The problem seems to be related to processing tld
in jars.  Weird.

Stay tuned.

PR:
Obtained from:
Submitted by:
Reviewed by:


git-svn-id: https://svn.apache.org/repos/asf/tomcat@305555 13f79535-47bb-0310-9956-ffa450edef68